--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <div class="w-full self-end px-4 lg:w-1/2 md:w-1/2">
                     <div class="mt-10 relative lg:mt-0 lg:-right-9"> 
-                        <img src="/img/cp satria.png" alt="Satria ananta picture" class="max-w-full  mx-auto h-56 w-48 rounded-xl">
+                        <img src="img/cp satria.png" alt="Satria ananta picture" class="max-w-full  mx-auto h-56 w-48 rounded-xl">
                         <span  class="absolute -bottom-[80px] -z-10 left-1/2 -translate-x-1/2 lg:scale-110">
                             <svg width="280px" height="400px" viewBox="-120 -120 240 240"  xmlns="http://www.w3.org/2000/svg">
                                 <path d="M 79.55372051525578,0 C 79.55372051525578,40.010212762208646 37.50600100755282,68.90676496798237 4.219322457881929e-15,68.90676496798237 C -37.506001007552804,68.90676496798237 -70.47028351495545,40.01021276220865 -70.47028351495545,8.630120714159669e-15 C -70.47028351495545,-40.01021276220864 -37.506001007552825,-91.13408608085221 -1.674106002182025e-14,-91.13408608085221 C 37.5060010075528,-91.13408608085221 79.55372051525578,-40.010212762208646 79.55372051525578,0 Z" fill="#70e2ff"/>
